Changes
=======

1.13 (unreleased)
-----------------

- Nothing changed yet.


1.13a1 (2009-11-15)
-------------------

- Use zope.container instead of deprecated zope.app.container, use zope.site
  instead of zope.app.folder.

- Some imports have been modified, to avoid deprecation warnings,
  while using ZTK 1.0dev. [trollfot]

- Added support for ZTK 1.0dev. This was possible by changing
  slightly the DirectoryResource implementation. The DirectoryResource
  now uses `zope.browserresource` where DirectoryResourceFactory's factories
  are no longer a class-level dict entry but utilities. [trollfot]


1.12.2 (2009-09-17)
-------------------

- Test fix: support windows paths.

1.12.1 (2009-09-17)
-------------------

- A compatibility fix to support ``grokcore.viewlet``.

1.12 (2009-09-17)
-----------------

- Use 1.0b1 versions.cfg in Grok's release info instead of a local
  copy; a local copy for all grokcore packages is just too hard to
  maintain.

- Revert the splitting CodeView/View. The original reasons for the
  split have been obsoleted by the recent martain developments
  regarding inheritted module level directives. At the same time the
  split up components proved cumbersome to use and a too big a change
  between the 1.0a and 1.0b releases of Grok.

  View components will now again behave like it did up until the latest alpha
  release of Grok.

  ``CodeView`` is still available as a backwards compatibility alias
  for ``View``. Please update all references to ``CodeView`` to
  ``View``.

- Fix the template registry and grokker for views to let View and
  other components using View as base class to be associated with a
  template directly by setting it as 'template' attribute on the view
  class. Example::

    class MyView(grokcore.view.View):

        template = grokcore.view.PageTemplate('<p>hello</p>')

  This isn't exactly *officially* supported but enough people depend
  on it and have documented it so that we don't want to just break it.
